--- a/css/styles.css
+++ b/css/styles.css
@@ -1,40 +1,63 @@
 html {scroll-behavior: smooth;}
 * {margin:0px; padding:0px; box-sizing: border-box; font-family: 'poppins', sans-serif;}
 body {color: #ededed; background-color: #081b29;}
+body#themeColorMode.active {color: #000; background-color: #fff;}
 .header {position:sticky; top: 0; left: 0; width: 100%; padding: 12px 10%; background:#051129; display: flex; justify-content: space-between; align-items: center; z-index: 100;}
 .logo {position: relative; font-size: 25px; color: #fff; text-decoration: none; font-weight: 600; cursor: default; opacity: 0; animation: slideRight 1s ease forwards;}
 .navbar a {display:inline-block; font-size:14px; color: #fff; text-decoration: none; font-weight: 500; border: solid 1px #051129; margin-left:12px; padding: 8px 16px; transition: .3s; opacity: 0; animation: slideTop .5s ease forwards; animation-delay: calc(.2s * var(--i));}
 .navbar a:hover {color: #0ef; border:solid 1px #0ef; border-radius: 4px; transition: 1s ease;}
-.home {position: relative; width: 100%; display: flex; align-items: center; padding:50px 10% 0; justify-content: space-between; height: 100vh; background-color: #000;}
+.header button.themeColorBtn {background: #00eeff; padding:5px 10px; border-radius: 4px; border: none; font-size: 20px; transition: 0.5s; position: absolute; top:13px; right:16px; cursor: pointer;}
+body#themeColorMode .header button span.light {display: none;}
+body#themeColorMode .header button span.dark {display: inline-block;}
+body#themeColorMode.active .header button span.light {display: inline-block;}
+body#themeColorMode.active .header button span.dark {display: none;}
+body#themeColorMode.active .header button.themeColorBtn {background-color: #fff; color: #000;}
+.home {position: relative; width: 100%; display: flex; align-items: center; padding:50px 10% 0; justify-content: space-between; height: 100vh; background-color: #000;  transition: 0.5s;}
 .home .profile-pic img {width: 50%;}
 .home-content {max-width: 600px;}
 .home-content h3 {font-size: 32px; font-weight: 700; opacity: 0; animation: slideBottom 1s ease forwards; animation-delay: .7s;}
 .home-content h3 span {color:#0ef;}
+body#themeColorMode.active .home-content h3 span {color:#0064ff;}
 .home-content h1 {font-size: 56px; font-weight: 700; margin: 8px 0; opacity: 0; animation: slideRight 1s ease forwards; animation-delay: 1s;}
 .home-content p {font-size: 20px; opacity: 0; margin-top: 8px; animation: slideLeft 1s ease forwards;}
 .home-sci a {display: inline-flex; justify-content: center; align-items: center; width: 40px; height:40px; background:transparent; border:solid 2px #0ef; border-radius: 50%; font-size: 20px; color: #0ef; text-decoration: none; margin: 30px 15px 30px 0px; transition: .5s ease; opacity: 0; animation: slideBottom 1s ease forwards; animation-delay:calc(.2s * var(--i));}
+body#themeColorMode.active .home-sci a {border:solid 2px #0064ff; color: #0064ff;}
 .home-sci a:hover {background: #0ef; color: #081b29; box-shadow: 0 0 20px #0ef;}
+body#themeColorMode.active .home-sci a:hover {background:#0064ff; box-shadow: 0 0 20px #0064ff; color: #fff;}
+body#themeColorMode.active .home {background-color: #fff;}
 .btn-box {display: inline-block; padding: 12px 28px; background:#000; border-radius: 40px; border: 1px solid #0ef; font-size: 16px; color: #0ef; letter-spacing: 1px; text-decoration: none; font-weight: 600; opacity: 0; animation: slideTop 1s ease forwards; animation-delay: 2s; box-shadow: 0 0 5px #0ef, 0 0 25px #0ef}
 .btn-box:hover {box-shadow: 0 0 5px cyan, 0 0 25px cyan, 0 0 100px cyan, 0 0 200px cyan; background: #0ef; color: #000;}
-.about {display: grid; grid-template-columns: repeat(2, 1fr); align-items: center; gap: 1.5rem; padding: 32px; padding-top: 90px;}
+body#themeColorMode.active .btn-box {background:#fff; border: 1px solid #0064ff; color: #0064ff; box-shadow: 0 0 5px #0064ff, 0 0 25px #0064ff}
+body#themeColorMode.active .btn-box:hover {box-shadow: 0 0 5px #0064ff, 0 0 25px #0064ff 0 0 100px #0064ff, 0 0 200px #0064ff; background: #0064ff; color: #fff;}
+.about {display: grid; grid-template-columns: repeat(2, 1fr); align-items: center; gap: 1.5rem; padding: 32px; padding-top: 90px; transition: 0.5s;}
+body#themeColorMode.active .about {background-color:#ececec;}
 .about-img {display: flex; justify-content: center;}
 .about-img img {padding-bottom:10%; max-width:400px; height: auto; width: 100%; border-radius: 8px;}
 .about-text h2 {font-size: 60px;}
 .about-text h2 span {color:#0ef}
+body#themeColorMode.active .about-text h2 span {color:#0064ff}
 .about-text h4 {font-size: 29px; font-weight: 600; color: #fff; line-height: 1.7; margin: 15px 0 30px;}
 .about-text p {color: aliceblue; font-size: 20px; line-height: 1.4; margin-bottom: 4rem;}
+body#themeColorMode.active .about-text h4 {color: #000;}
+body#themeColorMode.active .about-text p {color: #000;}
 .services {color: aliceblue; font-size: 20px; line-height:1.4; margin-bottom:0; background:linear-gradient(to top, #30cfd0 0%, #330867 100%);}
-.services .sub-title {text-align: center; font-size: 60px; padding:40 0px;}
+body#themeColorMode.active .services {color: #fff; background: #fff;}
+body#themeColorMode.active .services .sub-title {color: #000;}
+body#themeColorMode.active .sub-title span {color: #0064ff;}
+.services .sub-title {text-align: center; font-size: 60px; padding:0px;}
 .services .sub-title span {color: #0ef;}
 .services .container {padding: 90px;}
 .services .services-list {display: grid; grid-template-columns: repeat(auto-fit,minmax(259px,1fr)); grid-gap: 40px; margin-top:50px;}
-.services .services-list div {background-color: #333; padding: 40px; font-size: 13px; border-right: 10px; border-radius: 20px; text-align: center; transform: 0.5s; box-shadow: 1px 1px 20px #012290f7, 1px 1px 40px #0053b8f7}
+.services .services-list div {background-color: #333; padding: 40px; font-size: 13px; border-right: 10px; border-radius: 20px; text-align: center; transition: 0.5s; box-shadow: 1px 1px 20px #012290f7, 1px 1px 40px #0053b8f7}
+body#themeColorMode.active .services .services-list div {background-color: #828282; box-shadow: unset;}
 .services .services-list div span {font-size: 50px; margin-bottom: 30px;}
 .services .services-list div h2 {font-size: 30px; font-weight: 500; margin-bottom: 15px;}
 .services .services-list div a {text-decoration: none; color:#000; font-size: 12px; margin-top:20px; display: inline-block;}
 .services .services-list div a {text-decoration: none; color:#000; font-size: 12px; margin-top:20px; display: inline-block;}
 .services .services-list div a.read {display: inline-block; padding: 12px; background: #081b29; border-radius: 40px; font-size: 16px; color: #0ef; letter-spacing: 1px; text-decoration: none; font-weight: 600; opacity: 0; animation: slideTop 1s ease forwards; animation-delay: 2s; box-shadow: 0 0 5px #0ef, 0 0 25px #0ef;} 
 .services .services-list div a.read:hover {box-shadow: 0 0 5px cyan, 0 0 25px cyan, 0 0 50px cyan, 0 0 100px cyan, 0 0  200px cyan;}
+body#themeColorMode.active .services .services-list div a.read {background: #fff; color: #0064ff; box-shadow: 0 0 5px #0064ff, 0 0 25px #0064ff;} 
+body#themeColorMode.active .services .services-list div a.read:hover {box-shadow: 0 0 5px #0064ff, 0 0 25px #0064ff, 0 0 50px #0064ff, 0 0 100px #0064ff, 0 0  200px #0064ff;}
 .services .services-list div:hover {transform: translateY(-10px); animation:1s ease forwards;}
 .skill {padding:60px 0px 40px 0px;}
 .skill .skillContainer {display: flex; justify-content: center;}
@@ -63,6 +86,7 @@ body {color: #ededed; background-color: #081b29;}
 .technical-bars .bar .progress-line::after {position:absolute; padding: 1px 8px; background-color: #000; color: #fff; font-size: 12px; border-radius: 3px; top:-28px; right: -20px; animation:showText 0.5s 1.5s linear forwards; opacity: 0;}
 .technical-bars .bar .progress-line span::before {content: ""; position:absolute; width: 0; height: 0; border: 7px solid transparent; border-bottom-width: 0px; border-right-width: 0px; border-top-color: #000; top: -10px; right: 0; animation: shottext 0.5s 1.5s linear forwards; opacity: 0;}
 .technical-bars .bar .progress-line span::after { position:absolute; top:-26px; right: -20px; font-size: 12px; background-color: #000; border-radius: 8px; padding:4px 8px}
+body#themeColorMode.active .technical-bars .bar .progress-line span::after {background-color: #fff;}
 
 .radial-bars {width: 100%; display: flex; flex-wrap: wrap; justify-content: space-evenly; align-items: flex-start; position: relative;}
 .radial-bars .radial-bar {width: 50%; height:240px; margin-bottom: 10px; position: relative;}
@@ -78,6 +102,7 @@ body {color: #ededed; background-color: #081b29;}
 .portfolio {position:relative; top:150px; padding-top:100px;}
 .main-text h2 {font-size: 60px; line-height: 1; text-align: center; margin-bottom: 32px;}
 .main-text h2 span {color: #0ef;}
+body#themeColorMode.active .main-text h2 span {color: #0064ff;}
 .portfolio-content {display: grid; gap: 0px; padding: 0px 30px; grid-template-columns: repeat(auto-fit, minmax(350px, auto));}
 .portfolio-content .row {position:relative; width: 350px; height:300px; overflow: hidden; border-radius: 8px; cursor: pointer;}
 .portfolio-content .row img {height: 100%; border-radius: 8px; display: block; transition:transform 0.5s;}
@@ -88,11 +113,15 @@ body {color: #ededed; background-color: #081b29;}
 .portfolio-content .layer a {color: aliceblue;text-decoration: none;padding: 6px 12px;background: #f00;box-shadow: 1px 2px 6px #ac2525;border-radius: 4px;font-size: 14px; margin-top: 15px;}
 .portfolio-content .row:hover img {transform:scale(1.1);}
 .portfolio-content .row:hover .layer {height: 100%;}
-.contact {display: grid; grid-template-columns: repeat(2, 1fr); align-items: center; gap: 3rem; padding:0px 32px; margin-top:230px;}
+.contact {display: grid; grid-template-columns: repeat(2, 1fr); align-items: center; gap: 3rem; padding:60px 32px; margin-top:230px;}
+body#themeColorMode.active .contact { background-color:#ececec;}
 .contact-text h2 {font-size:60px; line-height: 1; text-align: center; margin:0px 0px 50px 0px;}
 .contact-text h2 span {color: #0ef;}
+body#themeColorMode.active .contact-text h2 span {color: #0064ff;}
 .contact-text h4 {margin: 15px 0; color:rgb(228,228,228); font-size: 20px; font-weight: 600;}
+body#themeColorMode.active .contact-text h4 {color: #000;}
 .contact-text p {color: rgb(177, 177, 177); font-size: 20px; line-height: 30px; margin-bottom: 2rem;}
+body#themeColorMode.active .contact-text p {color: rgb(69 69 69);}
 .contact-list {margin-bottom:3rem}
 .contact-list i {margin-bottom: 10px; display: block;}
 .contact-list li i {display: inline-block; color: #0ef; font-size: 20px; font-weight: 600; transition: all .40s ease;}
@@ -103,8 +132,11 @@ body {color: #ededed; background-color: #081b29;}
 .contact-form form input, form textarea {border: none; outline: none; width:100%; padding: 18px; background: #fff; color:#000; font-size: 1rem; font-weight: 600; margin-bottom: 0.5rem; border-radius: 0.5rem;}
 .contact-form textarea {resize: none; height: 220px;}
 .contact-form form .send {display: inline-block; padding: 14px 60px; background: #081b29; border-radius: 40px; font-size: 18px; color: #0ef; letter-spacing: 1px; text-decoration: none; font-weight: 600; opacity: 0; animation: slideTop 1s ease forwards; animation-delay: 2s; box-shadow: 0 0 5px #0ef, 0 0 25px #0ef}
-.contact-form form .send:hover {box-shadow: 0 0 5px cyan, 0 0 25px cyan, 0 0 50px cyan, 0 0 100px cyan, 0 0 200px cyan;}
-.last-text p {width: 100%; text-align: center; padding: 25px 0px; background: rgb(7, 85, 91); font-weight: 300; margin-top: 70px;}
+.contact-form form .send:hover {box-shadow: 0 0 5px cyan, 0 0 25px cyan, 0 0 50px cyan, 0 0 100px cyan, 0 0 200px cyan; cursor: pointer;}
+body#themeColorMode.active .contact-form form .send {background: #fff; border-color:#0064ff; color: #0064ff; box-shadow: 0 0 5px #0064ff, 0 0 25px #0064ff}
+body#themeColorMode.active .contact-form form .send:hover {box-shadow: 0 0 5px #0064ff, 0 0 25px #0064ff, 0 0 50px #0064ff, 0 0 100px #0064ff, 0 0 200px #0064ff;}
+.last-text p {width: 100%; text-align: center; padding: 25px 0px; background: rgb(7, 85, 91); font-weight: 300;}
+body#themeColorMode.active .last-text p {color: #fff;}
 .top {position: fixed; bottom: 2.1rem; right: 2.1rem;}
 .top i {color: #000; background: #0ef; font-size: 20px; padding: 10px; border-radius: 0.5rem;}
 #myBtn {display:none; position:fixed; bottom:20px; right:30px; z-index:99; font-size:24px; font-weight: 600; border:none; outline:none; background-color:red; color:white; cursor:pointer; padding:8px 12px; border-radius:4px;}
@@ -113,6 +145,23 @@ body {color: #ededed; background-color: #081b29;}
 .reveal {position:relative; transform: translateY(150px); opacity: 0; transition: all 1s ease;}
 .reveal.active {transform: translateY(0px); opacity:1; background:none;}
 .whatsAppChat {position: fixed; right: 30px; bottom: 70px;}
+body#themeColorMode.active .blinking {width: 100%; height: 100vh; position: fixed; top:0px; left: 0px; background-color: #fff; z-index:99; animation: blining 0.4s linear forwards;}
+body .blinking.active {width: 100%; height: 100vh; position: fixed; top:0px; left: 0px; background-color: #fff; z-index:99; animation: blining1 0.4s linear forwards;}
+
+@keyframes blining {
+20% {background-color: #fff; display: block;}
+40% {background-color: #000; display: block;}
+60% {background-color: #fff; display: block;}
+80% {background-color: #000; display: block;}
+100% {background-color: #fff; display: none;}
+}
+@keyframes blining1 {
+    20% {background-color: #fff; display: block;}
+    40% {background-color: #000; display: block;}
+    60% {background-color: #fff; display: block;}
+    80% {background-color: #000; display: block;}
+    100% {background-color: #fff; display: none;}
+    }
 
 @keyframes animate-path1 {
     100% {stroke-dashoffset: 50;}
@@ -189,5 +238,6 @@ body {color: #ededed; background-color: #081b29;}
   .header {padding: 8px 10%;}
   .about-img img {width: 80%;}
   .contact.reveal {margin-top:0px; padding-top: 100px;}
-
+  .header button.themeColorBtn {top:21px; right:19px; padding: 2px 5px; font-size: 16px;}
+  span.iconToggle.active + nav + button.themeColorBtn {display: none;}
 }
