--- a/css/styles.css
+++ b/css/styles.css
@@ -162,22 +162,24 @@ body .blinking {display: none;}
 body#themeColorMode.active .blinking {width: 100%; display: block; height: 100vh; position: fixed; top:0px; left: 0px; background-color: #fff; z-index:99; animation: blining 0.4s linear forwards;}
 body .blinking.active {width: 100%; height: 100vh; display: block; position: fixed; top:0px; left: 0px; background-color: #fff; z-index:99; animation: blining1 0.4s linear forwards;}
 .p-relative {position:relative;}
-.animatedBox div {position: absolute; width: 60px; height: 60px; border-radius:50%; background-color: transparent; border: solid 1px rgba(255, 255, 255, 0.8);}
-body#themeColorMode.active .animatedBox div { border: solid 1px rgba(0, 0, 0, 0.8);}
+.animatedBox div {position: absolute; width: auto; height: auto; background-color: transparent; font-size:24px;}
 .animatedBox div:nth-child(1){top: 12%; left: 42%; animation: animatedBox 10s linear infinite;}
-.animatedBox div:nth-child(2){top: 70%; left: 50%; animation: animatedBox 7s linear infinite;}
+.animatedBox div:nth-child(2){top: 10%; left: 50%; animation: animatedBox 7s linear infinite;}
 .animatedBox div:nth-child(3){top: 17%; left: 6%; animation: animatedBox 9s linear infinite;}
 .animatedBox div:nth-child(4){top: 20%; left: 60%; animation: animatedBox 10s linear infinite;}
-.animatedBox div:nth-child(5){top: 67%; left: 10%; animation: animatedBox 6s linear infinite;}
-.animatedBox div:nth-child(6){top: 80%; left: 70%; animation: animatedBox 12s linear infinite;}
-.animatedBox div:nth-child(7){top: 60%; left: 80%; animation: animatedBox 15s linear infinite;}
+.animatedBox div:nth-child(5){top: 67%; left: 10%; animation: animatedBox 10s linear infinite;}
+.animatedBox div:nth-child(6){top: 1%; left: 80%; animation: animatedBox 12s linear infinite;}
+.animatedBox div:nth-child(7){top: 2%; left: 90%; animation: animatedBox 15s linear infinite;}
 .animatedBox div:nth-child(8){top: 32%; left: 25%; animation: animatedBox 16s linear infinite;}
 .animatedBox div:nth-child(9){top: 90%; left: 25%; animation: animatedBox 9s linear infinite;}
-.animatedBox div:nth-child(10){top: 20%; left: 80%; animation: animatedBox 5s linear infinite;}
+.animatedBox div:nth-child(10){top: 37%; left: 10%; animation: animatedBox 15s linear infinite;}
+.animatedBox div:nth-child(11){top: 15%; left: 20%; animation: animatedBox 17s linear infinite;}
+.animatedBox div:nth-child(12){top: 42%; left: 12%; animation: animatedBox 15s linear infinite;}
+.animatedBox div:nth-child(13){top: 70%; left: 80%; animation: animatedBox 22s linear infinite;}
 
 @keyframes animatedBox {
-    0% {transform: scale(0) translateY(0) rotate(0); opacity: 1;}
-    100% {transform: scale(1.3) translateY(-90px) rotate(360deg); opacity:0.5;}
+    0% {transform: scale(0) translateY(0) rotate(0); opacity: 0.3;}
+    100% {transform: scale(1.3) translateY(120px) rotate(0deg); opacity:0.1;}
     }
 
 @keyframes blining {
