--- a/img/digitalwebsolutions/css/styles.css
+++ b/img/digitalwebsolutions/css/styles.css
@@ -194,7 +194,7 @@ input[type="datetime-local"]:hover::-webkit-calendar-picker-indicator {opacity: 
     header .m-navigatior.active ~ .contact-text {display: block; text-align: center;}
     header nav ul li {width: 100%;}
     header nav ul li a {width:100%; text-align: center;}
-    header nav div.m-navigatior {display: inline-block; position: absolute; color: #fff; right:0px; top:0px; padding:7px 16px; background-color: transparent; width: auto; font-size:24px; z-index:99;}
+    header nav div.m-navigatior {display: inline-block; position: absolute; color: #fff; right:0px; top:0px; padding:4px 16px; background-color: transparent; width: auto; font-size:30px; z-index:99;}
     header nav div.m-navigatior span.close {display: none;}
     header nav div.m-navigatior.active span.close {display: block;}
     header nav div.m-navigatior.active span.humberger {display: none;}
@@ -243,4 +243,5 @@ input[type="datetime-local"]:hover::-webkit-calendar-picker-indicator {opacity: 
   #ourServices {display: block;}
   .hero-section-btn {display: none;}
   .our-services-btn {display: block;}
+  section.service .container .box-container .box a:hover + .service-content-modal {transform: scale(1);}
 }
