--- a/css/styles.css
+++ b/css/styles.css
@@ -16,10 +16,10 @@ body#themeColorMode.active .header button.themeColorBtn {background-color: #fff;
 .home .profile-pic {display: inline-flex; justify-content: center;}
 .home .profile-pic img {width: 50%;}
 .home-content {max-width: 600px;}
-.home-content h3 {font-size: 32px; font-weight: 700; opacity: 0; animation: slideBottom 1s ease forwards; animation-delay: .7s;}
-body#themeColorMode.active .home-content h3 {color: #8b8b8b;}
-.home-content h3 span {color:#0ef;}
-body#themeColorMode.active .home-content h3 span {color:#0585e5;}
+.home-content .hText {font-size: 32px; font-weight: 700; opacity: 0; animation: slideBottom 1s ease forwards; animation-delay: .7s;}
+body#themeColorMode.active .home-content .hText {color: #8b8b8b;}
+.home-content .hText span {color:#0ef;}
+body#themeColorMode.active .home-content .hText span {color:#0585e5;}
 .home-content h1 {font-size: 56px; font-weight: 700; margin: 8px 0; opacity: 0; animation: slideRight 1s ease forwards; animation-delay: 1s;}
 .home-content p {font-size: 20px; line-height: 30px; opacity: 0; margin-top: 8px; animation: slideLeft 1s ease forwards;}
 .home-sci a {display: inline-flex; justify-content: center; align-items: center; width: 40px; height:40px; background:transparent; border:solid 2px #0ef; border-radius: 50%; font-size: 20px; color: #0ef; text-decoration: none; margin: 30px 15px 30px 0px; transition: .5s ease; opacity: 0; animation: slideBottom 1s ease forwards; animation-delay:calc(.2s * var(--i));}
